# garmin-connect-mcp

./: .gitignore  README.md  pyproject.toml
src/garmin_connect_mcp/: auth.py  client.py  server.py
